--- a/WebTest/src/main/webapp/css/layout.css
+++ b/WebTest/src/main/webapp/css/layout.css
@@ -27,6 +27,6 @@ section {
 footer {
 	margin-left: 15%;
 	margin-right: 15%;
-	background-color: #5fbe7d;
+	background-color: #fffce3;
 	padding: 20px;
 }
