--- a/MyLibrary/src/main/webapp/jsp/layout.css
+++ b/MyLibrary/src/main/webapp/jsp/layout.css
@@ -10,126 +10,125 @@ body {
 
 header {
 	margin-top: 1%;
-	margin-left: 15%;
-	margin-right: 15%;
+	margin-left: auto;
+	margin-right: auto;
 	min-height: 70px;
 	background-color: #fffce3;
+	text-align: center; /* 가운데 정렬 */
 }
 
 section {
-	
-	margin-left: 15%;
-	margin-right: 15%;
+	margin-left: auto;
+	margin-right: auto;
 	min-height: 500px;
 	background-color: #8080c0;
 	padding: 20px;
 }
 
 footer {
-	margin-left: 15%;
-	margin-right: 15%;
+	margin-left: auto;
+	margin-right: auto;
 	background-color: #fffce3;
 	padding: 20px;
 }
 
-
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        width: 100%;
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-      
-       .nav {
-    justify-content: center;
-  }
-
- .navbar-right {
-  margin-left: auto;
-  display: flex;
-  align-items: center;
+.bd-placeholder-img {
+	font-size: 1.125rem;
+	text-anchor: middle;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
 }
 
-      .btn-bd-primary {
-        --bd-violet-bg: #712cf9;
-        --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
-        --bs-btn-font-weight: 600;
-        --bs-btn-color: var(--bs-white);
-        --bs-btn-bg: var(--bd-violet-bg);
-        --bs-btn-border-color: var(--bd-violet-bg);
-        --bs-btn-hover-color: var(--bs-white);
-        --bs-btn-hover-bg: #6528e0;
-        --bs-btn-hover-border-color: #6528e0;
-        --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
-        --bs-btn-active-color: var(--bs-btn-hover-color);
-        --bs-btn-active-bg: #5a23c8;
-        --bs-btn-active-border-color: #5a23c8;
-      }
-      
-      .bd-mode-toggle {
-        z-index: 1500;
-      }
-      
-      .sidebar {
-    width: 250px;
-    background-color: #f8f9fa;
-    padding: 20px;
-  }
-  
-  @media (max-width: 768px) {
-      .sidebar {
-        width: 100%;
-      }
-    }
-  
+@media ( min-width : 768px) {
+	.bd-placeholder-img-lg {
+		font-size: 3.5rem;
+	}
+}
 
-  .mycontent {
-    flex: 1;
-    padding: 20px;
-  }
-    
+.b-example-divider {
+	width: 100%;
+	height: 3rem;
+	background-color: rgba(0, 0, 0, .1);
+	border: solid rgba(0, 0, 0, .15);
+	border-width: 1px 0;
+	box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em
+		rgba(0, 0, 0, .15);
+}
+
+.b-example-vr {
+	flex-shrink: 0;
+	width: 1.5rem;
+	height: 100vh;
+}
+
+.bi {
+	vertical-align: -.125em;
+	fill: currentColor;
+}
+
+.nav-scroller {
+	position: relative;
+	z-index: 2;
+	height: 2.75rem;
+	overflow-y: hidden;
+}
+
+.nav-scroller .nav {
+	display: flex;
+	flex-wrap: nowrap;
+	padding-bottom: 1rem;
+	margin-top: -1px;
+	overflow-x: auto;
+	text-align: center;
+	white-space: nowrap;
+	-webkit-overflow-scrolling: touch;
+}
+
+.nav {
+	justify-content: center;
+}
+
+.navbar-right {
+	margin-left: auto;
+	display: flex;
+	align-items: center;
+}
+
+.btn-bd-primary {
+  --bd-violet-bg: #712cf9;
+  --bd-violet-rgb: 112, 52, 249;
+  --bs-btn-font-weight: 600;
+  --bs-btn-color: var(--bs-white);
+  --bs-btn-bg: var(--bd-violet-bg);
+  --bs-btn-border-color: var(--bd-violet-bg);
+  --bs-btn-hover-color: var(--bs-white);
+  --bs-btn-hover-bg: #6528e0;
+  --bs-btn-hover-border-color: #6528e0;
+  --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+  --bs-btn-active-color: var(--bs-btn-hover-color);
+  --bs-btn-active-bg: #5a23c8;
+  --bs-btn-active-border-color: #5a23c8;
+}
+
+
+.bd-mode-toggle {
+	z-index: 1500;
+}
+
+.sidebar {
+	width: 250px;
+	background-color: #f8f9fa;
+	padding: 20px;
+}
+
+@media ( max-width : 768px) {
+	.sidebar {
+		width: 100%;
+	}
+}
+
+.mycontent {
+	flex: 1;
+	padding: 20px;
+}
