--- a/OpenBank/src/main/webapp/jsp/assets/css/style.css
+++ b/OpenBank/src/main/webapp/jsp/assets/css/style.css
@@ -87,14 +87,22 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  z-index: 997;
+	 position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+     transition: all 0.5s;
+  padding: 22px 0;
+  background: #ecf0f1;
+/*   z-index: 997;
   transition: all 0.5s;
   padding: 22px 0;
   background: #ecf0f1;
-  /*position: fixed;  
+  position: fixed;  
   top: 0;
   left: 0; 
-  width: 100%;  */
+  width: 100%;   */
 }
 
 #header.header-scrolled {
@@ -120,7 +128,7 @@ h6 {
 #header .logo img {
   padding: 0;
   margin: 0;
-  max-height: 40px;
+  max-height: 60px;
 }
 
 /*--------------------------------------------------------------
@@ -471,7 +479,7 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 150px 0;
   overflow: hidden;
 }
 
@@ -883,7 +891,7 @@ section {
 #testimonials {
   padding: 60px 0;
   background-color: #f8f8f8;
-  margin-top: 70px; /* 이전에 존재하던 hero 섹션의 높이에 해당하는 값 */
+  margin-top: 60px; /* 이전에 존재하던 hero 섹션의 높이에 해당하는 값 */
 }
 
 
@@ -902,8 +910,9 @@ section {
 
 .testimonials .testimonial-item {
   box-sizing: content-box;
-  padding: 30px 30px 30px 90px;
-  margin: 30px 15px;
+  /* padding: 30px 30px 30px 90px;
+  margin: 30px 15px; */
+  height: 600px;
   min-height: 200px;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
   position: relative;
@@ -997,6 +1006,7 @@ section {
     overflow: hidden;
   }
 
+	
   .testimonials .testimonial-item {
     padding: 30px;
     margin: 15px;
